--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   font_awesome_flutter: ^10.8.0
   diacritic: ^0.1.6
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
