--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   diacritic: ^0.1.6
   shared_preferences: ^2.0.11
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
